# MIT License
#
# Copyright (C) 2024 vanous
#
# This file is part of pygdtf.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pygdtf"
dynamic = ["version"]
readme = "README.md"
description="General Device Type Format (GDTF) library for Python"
requires-python = ">=3.8"
authors = [
  {name = "vanous", email = "noreply@nodomain.com"},
  {name = "Jack Page"},
]
maintainers = [
  {name = "vanous", email = "noreply@nodomain.com"},
]
keywords = ["MVR", "GDTF"]
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools]
packages = ["pygdtf", "pygdtf.utils"]

[tool.setuptools.dynamic]
version = {attr = "pygdtf.__version__"}

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mypy>=0.10.3",
    "ruff>=0.9.3",
]

[project.urls]
Repository = "https://github.com/open-stage/python-gdtf.git"
Changelog = "https://github.com/open-stage/python-gdtf/blob/master/CHANGELOG.md"

